# SmartImageLab

./: .coverage  .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ImageLab/: README.md
ImageLab/config/: config.yaml
ImageLab/smartimagelab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ImageLab/src/: __init__.py  _init_.py  config_manager.py  data_validator.py  error_logger.py  image_classifier.py  image_generator.py  image_identifier.py  image_logger.py  image_pipeline.py  image_preprocessor.py  image_processor.py  image_storage.py  image_validator.py  main.py
ImageLab/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
ImageLab/testes/: conftest.py  test_image_generator.py  test_image_preprocessor.py  test_image_validator.py  test_oci_storage.py
