[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartimagelab"
version = "0.1.0"
description = "Pipeline de geração, validação, classificação e armazenamento de imagens."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Rodrigo Dias de Oliveira" }]
license = { text = "MIT" }
dependencies = [
  "openai>=1.40.0",
  "requests>=2.32.0",
  "Pillow>=10.3.0",
  "numpy>=1.26.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "ultralytics>=8.2.0",
  "oci>=2.126.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests",
]

[project.scripts]
smartimagelab = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["ImageLab"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true      # libs sem stubs (torch, oci, ultralytics)
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["ImageLab"]
