[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartimagelab"
version = "0.1.0"
description = "Pipeline de geração, validação, classificação e armazenamento de imagens."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Rodrigo Dias de Oliveira" }
]
license = { text = "MIT" }

dependencies = [
    "openai>=1.40.0",
    "requests>=2.32.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.2.0",
    "oci>=2.126.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "tensorflow>=2.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
smartimagelab = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["ImageLab"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"

warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true

exclude = [
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=ImageLab/src --cov-report=term-missing"
pythonpath = ["ImageLab"]